--- a/index.html
+++ b/index.html
@@ -8,4 +8,9 @@
 	<p> This is my creative statement, <p>
 	<a href="https://tse3.mm.bing.net/th/id/OIP.ja-dH7BpNOzOIBD8GndVMAHaEo?rs=1&pid=ImgDetMain&o=7&rm=3">Link to image </a>
 </body>
+<body>
+	<h2> Readings.html </h2>
+	<a href=file:///C:/Users/qizha/Downloads/Medpl%20_On%20Photography_%20Hw.pdf> Link to homework </a>
+</body>
 </html>
+
