--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </body>
 <body>
 	<h2> Readings.html </h2>
-	<a href=file:///C:/Users/qizha/Downloads/Medpl%20_On%20Photography_%20Hw.pdf> Link to homework </a>
+	<a href="file:///C:/Users/qizha/Downloads/Medpl%20_On%20Photography_%20Hw.pdf"> Link to homework </a>
 </body>
 </html>
+
 
