--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 </body>
 <body>
 	<h2> Readings.html </h2>
-	<a href="Medpl _On Photography_ Hw.pdf"> Link to homework </a>
+	<a href="Medpl _On Photography_ Hw.pdf"> Link to homework #2 "On Photography" </a>
 </body>
 </html>
+
 
 
 
