--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
 	<p> This is my creative statement, <p>
 	<a href="https://tse3.mm.bing.net/th/id/OIP.ja-dH7BpNOzOIBD8GndVMAHaEo?rs=1&pid=ImgDetMain&o=7&rm=3">Link to image </a>
 </body>
-<body>
-	<h2> Readings.html </h2>
-	<a href="Medpl _On Photography_ Hw.pdf"> Link to homework #1 "On Photography" </a>
-</body>
-</html>
 
+<body>
+	<h1> Readings.html </h1>
+	<a href="file:///C:/Users/qizha/OneDrive/Readings.html"> Link to Readings.html </a>
+	
 
 
 
