--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
 <body>
 	<h1> Readings.html </h1>
-	<a href="file:///C:/Users/qizha/OneDrive/Readings.html"> Link to Readings.html </a>
+	<a href="Readings.html"> Link to Readings.html </a>
 	
+
 
 
 
