--- a/index.html
+++ b/index.html
@@ -6,13 +6,22 @@
 <body bgcolor="gray">
 	<h1> Katie </h1>
 	<p> This is my creative statement, <p>
-	<a href="https://tse3.mm.bing.net/th/id/OIP.ja-dH7BpNOzOIBD8GndVMAHaEo?rs=1&pid=ImgDetMain&o=7&rm=3">Link to image </a>
+	<a href="file:///C:/Users/qizha/OneDrive/Desktop/html/creative%20statement.html">Link to creative statement.html </a>
+<img src="https://tse3.mm.bing.net/th/id/OIP.ja-dH7BpNOzOIBD8GndVMAHaEo?rs=1&pid=ImgDetMain&o=7&rm=3" align="right" height="500" width="1000"</img>
+</body>
+	<body>
+	<h1> Readings.html </h1>
+	<a href="file:///C:/Users/qizha/OneDrive/Desktop/html/Readings.html"> Link to Readings.html </a>
 </body>
 
-<body>
-	<h1> Readings.html </h1>
-	<a href="Readings.html"> Link to Readings.html </a>
+	<h1> Image-1.html </h1>
+	<a href="file:///C:/Users/qizha/OneDrive/Desktop/html/Image-1.html"> Link to Image-1.html </a>
 	
+	<h1> Image-2.html </h1>
+	<a href="file:///C:/Users/qizha/OneDrive/Desktop/html/Image-2.html"> Link to Image-2.html </a>
+
+	
+
 
 
 
