--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body bgcolor="gray">
 	<h1> Katie </h1>
 	<p> This is my creative statement, <p>
-	<a href="file:///C:/Users/qizha/OneDrive/Desktop/html/creative%20statement.html">Link to creative statement.html </a>
+	<a href="creative statement.html">Link to creative statement.html </a>
 <img src="https://tse3.mm.bing.net/th/id/OIP.ja-dH7BpNOzOIBD8GndVMAHaEo?rs=1&pid=ImgDetMain&o=7&rm=3" align="right" height="500" width="1000"</img>
 </body>
 	<body>
@@ -21,6 +21,7 @@
 	<a href="file:///C:/Users/qizha/OneDrive/Desktop/html/Image-2.html"> Link to Image-2.html </a>
 
 	
+
 
 
 
