--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
 </body>
 	<body>
 	<h1> Readings.html </h1>
-	<a href="file:///C:/Users/qizha/OneDrive/Desktop/html/Readings.html"> Link to Readings.html </a>
+	<a href="Readings.html"> Link to Readings.html </a>
 </body>
 
 	<h1> Image-1.html </h1>
-	<a href="file:///C:/Users/qizha/OneDrive/Desktop/html/Image-1.html"> Link to Image-1.html </a>
+	<a href="Image-1.html"> Link to Image-1.html </a>
 	
 	<h1> Image-2.html </h1>
-	<a href="file:///C:/Users/qizha/OneDrive/Desktop/html/Image-2.html"> Link to Image-2.html </a>
+	<a href="Image-2.html"> Link to Image-2.html </a>
 
 	
+
 
 
 
