--- a/Image-2.html
+++ b/Image-2.html
@@ -5,6 +5,7 @@
 </head>
 <body background="https://i.pinimg.com/originals/3e/21/62/3e21621306d89fb236e2fe6894c4cf5b.jpg">
 	<h1> Katie's Image-2.html </h1>
-	<img src="C:/Users/qizha/OneDrive/Desktop/Edited phots in Adobe/Hunter drawing_ edited.jpg" height="500" width="500" ></img>
+	<img src="Hunter drawing_ edited.jpg" height="500" width="500" ></img>
 </body>
 </html>
+
