--- a/Image-1.html
+++ b/Image-1.html
@@ -5,9 +5,15 @@
 </head>
 <body background="https://i.pinimg.com/originals/3e/21/62/3e21621306d89fb236e2fe6894c4cf5b.jpg">
 	<h1> Katie's Image-1.html </h1>
-	<img src="Hunter building edited.jpg" height="500" width="1000" ></img>
+<div style="display: flex;">
+	<img src="C:/Users/qizha/OneDrive/Desktop/Edited phots in Adobe/Hunter building edited.jpg" height="500" width="1000" ></img>
 </body>
+<p>I chose this image that was taken on the 8th floor of the Hunter building because It shows the snow, and parts of the school all in one image.  I also felt that the original photo was really dark, and so I wanted to see if I could edit it by brightening it up, so I used a curve layer to alter the brightness so that the viewers can see the details in the building, like each peice of brick.  I also noticed that the original photo had a little reflection on the brown building and so I wanted to make it less obvious.  I realized that as the building gets lighter and lighter the reflection shows less.  I also brightened the light brown or yellowish building so that the ac's stand out more and so that people can see how empty the classrooms were at the time the photo was taken.  When editing the photo I also noticed that I can make the vertical lines on the light brown building appear brighter and I felt that it looks nice like that.</p> 
+</div>
 </html>
+
+
+
 
 
 
