--- a/Image-2.html
+++ b/Image-2.html
@@ -5,7 +5,11 @@
 </head>
 <body background="https://i.pinimg.com/originals/3e/21/62/3e21621306d89fb236e2fe6894c4cf5b.jpg">
 	<h1> Katie's Image-2.html </h1>
-	<img src="Hunter drawing_ edited.jpg" height="500" width="500" ></img>
+<div style="display: flex;">
+	<img src="C:/Users/qizha/OneDrive/Desktop/Edited phots in Adobe/Hunter drawing_ edited.jpg" height="500" width="500" ></img>
 </body>
+<p> For this photo It was taken at an empty art classroom at the West building of the school.  I thought the drawing was nice because it was a person with two faces.  I feel like if you picture that it would sound weird, but this person made it look nice.  I feel like it looks cool and that the face is almost like the face of a horse.  When I took the photo I noticed this one looks really dark, since it was pasted on the wall under a shelf, so I wanted to edit it to make it brighter so that people can see the details in this artwork.  As I played around with the curves tool in Adobe Bridge I noticed that as I changed the colors the frame around the photo slowly became many shades of blue and pink.  I thought this was really pretty so I kept it.  Overall compared to the original the new one I editied is so much brighter so people can see it and it makes this persons art stand out more.
+</div>
 </html>
+
 
